<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassActivity"
    android:background="@color/app_bg"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="233dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:src="@drawable/forgot"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_title"
            android:textSize="44sp"
            android:textColor="@color/black"
            android:fontFamily="@font/aldrich"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass_detail"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/aldrich"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/forgot_passId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/app_bg"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/enter_your_id"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_id"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:background="@color/black"
            android:fontFamily="@font/aldrich"
            android:textColor="@color/app_bg"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>



    </LinearLayout>
</ScrollView>