<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetNewPasswordActivity"
    android:background="@color/app_bg"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="123dp"
            android:layout_height="103dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/pass_reset"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:text="@string/new_credentials"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_identity_has_been_verified_set_your_new_password"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="40dp"
            app:boxBackgroundColor="@color/app_bg"
            android:hint="@string/new_password"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/iic_password"
            app:startIconTint="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_confirm_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginTop="20dp"
            app:boxBackgroundColor="@color/app_bg"
            android:hint="@string/confirm_password"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/black"
            app:startIconDrawable="@drawable/iic_password"
            app:startIconTint="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/black"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/aldrich"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:textColor="@color/app_bg"
            android:text="@string/save"
            android:fontFamily="@font/aldrich"/>

    </LinearLayout>

</ScrollView>