<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/app_bg"
    android:orientation="vertical"
    android:padding="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="405dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@color/app_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/ic_back" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/setting_profile_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_id" />

            <TextView
                android:id="@+id/profile_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/aldrich"
                android:text="user name"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="275dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accounts"
                        android:textColor="@color/black"
                        android:fontFamily="@font/aldrich"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:fontFamily="@font/aldrich"
                        android:text="@string/_4"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:id="@+id/disp_accounts_counter"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aldrich"
                        android:text="@string/balance"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/disp_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aldrich"
                        android:paddingTop="10dp"
                        android:text="@string/_360"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aldrich"
                        android:text="@string/messages"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/disp_msg_counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/aldrich"
                        android:paddingTop="10dp"
                        android:text="@string/_0"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="45dp">
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/mail"/>
            <TextView
                android:textStyle="bold"
                android:id="@+id/profile_email"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/xxsas_gmail_com"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingStart="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_black_phone"
               />
            <TextView
                android:textStyle="bold"
                android:id="@+id/profile_phone"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/_266_225_225"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:visibility="invisible">

            <Button
                android:id="@+id/add_account_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/ic_profile" />

            <!--<ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_add_account_black"/>-->
            <TextView
                android:id="@+id/txt_add_account_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/add_account"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>





    <!--/
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.constraint.ConstraintLayout>
    -->
